2006-02-26  Chia-I Wu  <b90201047@ntu.edu.tw>

	* src/core/font.cpp (CFont::RecalculateMetrics): Lock may fail.

2006-02-24  Emfox Zhou  <emfoxzhou@gmail.com>

	* po/pcmanx.pot,
	po/zh_TW.po,
	po/zh_CN.po: Update my name, complete zh_CN.po.

2006-02-23  Emfox Zhou  <emfoxzhou@gmail.com>

	* src/mainframe.cpp: Move runtime Mouse Support switch to Preference,
	so it's savable now.

2006-02-23  Emfox Zhou  <emfoxzhou@gmail.com>

	* src/mainframe.cpp: also, translation of toolbar tooltips back.

2006-02-23  Emfox Zhou  <emfoxzhou@gmail.com>

	* src/mainframe.cpp: Fix popup menu, add tooltips back to toolbar.

2006-02-22  Jim Huang  <jserv@kaffe.org>

	* src/docklet/eggtrayicon.h,
	src/docklet/eggtrayicon.c (egg_tray_icon_manager_filter)
	(egg_tray_icon_update_manager_window)
	(egg_tray_icon_manager_window_destroyed) (egg_tray_icon_realize):
	Apply some patches from libegg to fix the extra spacing between
	icons.

2006-02-22  Youchen Lee  <copyleft@utcr.org>

	* src/mainframe.h,
	src/mainframe.cpp (CMainFrame::OnFullscreenMode)
	(CMainFrame::fullscreen_mode_entries[]),
	src/notebook.h (CNotebook::HideTabs) (CNotebook::ShowTabs): Added
	Fullscreen Mode support.
	
	* po/pcmanx.pot,
	po/zh_TW.po
	po/zh_CN.po: Updated po files for fullscreen mode, modified my email
	address, added developer Emfox Zhou to zh_TW.po and zh_CN.po (not
	contained Chinese name yet).

2006-02-20  Jim Huang  <jserv@kaffe.org>

	* autogen.sh: Fixlet to autotool generation.

2006-02-19  Jim Huang  <jserv@kaffe.org>

	* configure.ac: Added Xft headers detection workaround.

2006-02-19  Jim Huang  <jserv@kaffe.org>

	* src/appconfig.h (ShowStatusBar),
	src/generalprefpage.h (m_ShowStatusBar),
	src/appconfig.cpp (CAppConfig::DoDataExchange)
	(CAppConfig::SetToDefault): New members to indicate if
	status bar should be shown. Default: shown.

	* src/generalprefpage.cpp (CGeneralPrefPage::CGeneralPrefPage)
	(CGeneralPrefPage::CGeneralPrefPage) (CGeneralPrefPage::OnOK): Handle