@@ -83,7 +83,9 @@ bool CAppConfig::DoDataExchange(bool bLoad)
 		CFG_BOOL( CancelSelAfterCopy)
 		CFG_BOOL( CopyTrimTail)
 		CFG_BOOL( BeepOnBell )
+#ifdef USE_MOUSE
 		CFG_BOOL( MouseSupport )
+#endif
 		CFG_BOOL( ShowTrayIcon )
 		CFG_BOOL( ShowStatusBar )
 		CFG_BOOL( UseWgetFiles )
@@ -300,7 +302,9 @@ void CAppConfig::SetToDefault()
 	QueryOnCloseCon = 1;
 	CancelSelAfterCopy =1;
 	CopyTrimTail = 1;
+#ifdef USE_MOUSE
 	MouseSupport = 0;
+#endif
 	PopupNotifier = true;
 	PopupTimeout = 6;
 	UseWgetFiles = false;
